# rse-ising-model

./: README.md  pyproject.toml
.github/workflows/: docs.yml  pypi.yml  tests.yml
examples/: ising_model.ipynb
src/: ising_model.py
src/ising_model/: __init__.py
tests/: test_ising.py
