[build-system]
requires = ["setuptools >= 77.0.3", "setuptools-scm==8.3.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "ising-model"
version = "0.0.7"
description = "Project for RSE in Python for RCS"
requires-python = ">=3.9"
license = "GPL-3.0"
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
    "numpy",
    "numba"
]

[project.optional-dependencies]
tests = [
    "pytest"
]
examples = [
    "matplotlib"
]
docs = [
    "pdoc"
]
